test/visibility/except/cannotSeeSecondaryMethod.good
cannotSeeSecondaryMethod.chpl:10: error: unresolved call 'owned Foo.newMethod(1)'
cannotSeeSecondaryMethod.chpl:10: note: because no functions named newMethod found in scope
